[package]
name = "hookguard"
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
authors = ["Itay Wolf <wo.itay@gmail.com>"]
description = "Trust-first git hook manager — hooks auto-install on clone, nothing runs without your consent"
license = "MIT OR Apache-2.0"
repository = "https://github.com/itaywol/hookguard"
homepage = "https://github.com/itaywol/hookguard"
readme = "README.md"
keywords = ["git", "hooks", "git-hooks", "security", "pre-commit"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "git-hooks"
path = "src/main.rs"

[dependencies]
toml = "0.8"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/git-hooks-{ target }-v{ version }{ binary-ext }"
pkg-fmt = "bin"
